@@ -1,5 +1,6 @@
  - remove dsa and add ed25519 in ssh keyscan by @StalkR and @lelutin
  - add support for fwmark option in fping 5.2+. Supports 'fwmark' keyword in FPing probe
+ - switch graphs from PNG to SVG, to handle automatically both low- and hi-dpi screens
 
 2025-02-19 14:07:15 +0100 Tobias Oetiker <tobi@oetiker.ch>
 
